--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
       <img src="images/site/logo.png" width="207" height="124" alt="Hansel and Petal" />
     </div>
 
+		<div id="allFlowers">
+		</div>
+
+		<div id="copy">
+		</div>
+
   </div>
+
+
+	<script id="flowerElement" type="text/template">
+		<a href="#<%= link %>"><img src="<%= img %>" alt="<%= name %>" class="image" /></a>
+		<ul>
+			<li class="flowerInfo"><strong>Name:</strong> <%= name %></li>
+			<li class="flowerInfo"><strong>Price:</strong> <%= price %></li>
+			<li class="flowerInfo"><strong>Color:</strong> <%= color %></li>
+		</ul>
+	</script>
 
   <script src="js/libs/jquery.js"></script>
   <script src="js/libs/underscore.js"></script>
